<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/feed_post_close_Ib"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/label_close"
                android:src="@drawable/ic_baseline_close_24"
                android:tint="@color/colorStandardBlack" />

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:text="@string/label_write_post" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/post_feed_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:hint="@string/label_whats_on_your_mind"
                    android:inputType="textCapSentences|text|textNoSuggestions|textMultiLine"
                    android:maxLines="12"
                    android:minLines="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/post_feed_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:background="@android:color/transparent"
                android:text="@string/label_post"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
