<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">


    <ImageView
        android:layout_width="@dimen/logo_w_h"
        android:layout_height="@dimen/logo_w_h"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/letsplaylogotemp"
        tools:ignore="ContentDescription" />

    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_signin_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/email_signin_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/hint_email"
            android:drawableEnd="@drawable/ic_baseline_email_24"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_signin_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password_signin_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Login Button -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_selector"
        android:text="@string/btn_login"
        android:textColor="@color/white" />

    <!-- Forget Password -->
    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:background="@null"
        android:text="@string/btn_forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/colorDarkBlue" />

    <!-- Divider -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="OR" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <!-- Link to Signup Screen -->
    <Button
        android:id="@+id/create_new_account_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_selector"
        android:paddingStart="10dp"
        android:layout_marginTop="5dp"
        android:paddingEnd="10dp"
        android:text="@string/btn_link_to_register"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/continue_as_a_guest_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_selector_outline"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/label_continue_as_a_guest"
        android:textColor="@drawable/text_selector_outline" />


</LinearLayout>
